# dpl

learning_materials/: dpl_terms.txt  people  resources
tools/Caffe/: intro
tools/cuDNN/: CUDNN_API
tools/cuDNN/cudnn-sample-v2/: Makefile  mnistCUDNN.cpp
tools/cuDNN/tests/01_conv/: argopt.hpp  cuda_checking.hpp  dnn_layer.hpp  dnn_network.hpp  fwd_conv.cu
tools/cuDNN/tests/cudnn-training/: CMakeLists.txt
tools/cuDNN/tests/test_conv_fwd/: CMakeCache.txt  CMakeLists.txt  argopt.hpp  dnn_layer.hpp  dnn_network.hpp  fwd_conv.cu
tools/tensorflow/: materials.txt
udacity_dpl/week1/DLND-your-first-network/: dlnd-your-first-neural-network.html  dlnd-your-first-neural-network.ipynb
udacity_dpl/week1/DLND-your-first-network/.ipynb_checkpoints/: dlnd-your-first-neural-network-checkpoint.ipynb
udacity_dpl/week1/DLND-your-first-network/Archive/: dlnd-your-first-neural-network.ipynb
udacity_dpl/week1/How_to_use_Tensorflow_for_classification-LIVE/: backprop_exe.ipynb  demo.ipynb  lambda.ipynb
udacity_dpl/week1/How_to_use_Tensorflow_for_classification-LIVE/.ipynb_checkpoints/: backprop-checkpoint.ipynb  backprop_exe-checkpoint.ipynb  data_prep.py-checkpoint.ipynb  demo-checkpoint.ipynb  practice-checkpoint.ipynb
udacity_dpl/week1/linear_regression_live/: demo.py
udacity_dpl/week1/regression/: exam01.ipynb
udacity_dpl/week1/regression/.ipynb_checkpoints/: exam01-checkpoint.ipynb
